apps/jellyseerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: jellyseerr
  labels:
    app: jellyseerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: jellyseerr
          image: ghcr.io/seerr-team/seerr:v3.5.0
          ports:
            - containerPort: 5055
              name: http
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /app/config
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config
