apps/jellyseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyseerr
  labels:
    app: jellyseerr
spec:
  type: ClusterIP
  selector:
    app: jellyseerr
  ports:
    - name: http
      port: 5055
      targetPort: http
      protocol: TCP
