apps/jellyseerr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyseerr.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: jellyseerr
          port: 5055
  tls:
    secretName: jellyseerr-tls
